# editax

./: Makefile  README.md  kinetix.txt  pyproject.toml  test.ipynb
craftax/: __init__.py  common.py  constants.py  craftax_comparators.py  craftax_editors.py  craftax_env.py  craftax_ood.py  craftax_pixels_env.py  craftax_state.py  craftax_symbolic_env.py  game_logic.py  play_craftax.py  renderer.py
craftax/assets/: texture_cache.pbz2
craftax/base/: environment_base.py
craftax/util/: game_logic_utils.py  math_utils.py  noise.py
craftax/world_gen/: world_gen.py  world_gen_configs.py
editax/: learning.py  manager.py  moed.py  state.py  template.py  upomdp.py  utils.py
editax/models/: lstm.py
editax/policy/: lstm.py
editex/: template.py
editors/kinetix/: designs.txt  editor-o3-mini-8inner-v1.py  editor_o3_mini_10inner_comp_v1.py  editor_o3_mini_10inner_comp_v2.py  editor_o3_mini_10inner_comprehensive_new_v1.py  editor_o3_mini_10inner_comprehensive_new_v2.py  editor_o3_mini_10inner_overlooked_v1.py  moed_out.txt
experiments/: gen_editors_kinetix.py  kinetix.json  maze.json  test_editors_policy_kinetix.py
kinetix/util/: saving.py
